src: Distribute config.m4
In a71cb51dd we tried to adapt to phpize (build system used by
php). Unfortunately, we missed the file in EXTRA_DIST therefore
while it is in git, it's not in distributed .tar.gz.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,4 +26,5 @@ libvirt_php_la_CFLAGS = \
 php_confdir = $(confdir)
 php_conf_DATA = libvirt-php.ini
 
-EXTRA_DIST = $(php_conf_DATA)
+EXTRA_DIST = $(php_conf_DATA) \
+	config.m4
