configure: Check how to provide symbol file to linker
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,12 @@ if test "$prefix" = "/usr" && test "$sysconfdir" = '${prefix}/etc' ; then
     sysconfdir='/etc'
 fi
 
+AC_MSG_CHECKING([for how to set DSO symbol versions])
+VERSION_SCRIPT_FLAGS=-Wl,--version-script=
+`$LD --help 2>&1 | grep -- --version-script >/dev/null` || \
+    VERSION_SCRIPT_FLAGS="-Wl,-M -Wl,"
+AC_MSG_RESULT([$VERSION_SCRIPT_FLAGS])
+
 LIBVIRT_REQUIRED=1.2.13
 PKG_CHECK_MODULES(LIBVIRT, libvirt >= $LIBVIRT_REQUIRED)
 PKG_CHECK_MODULES(QEMU, libvirt-qemu)
