--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ php_plugindir = $(extensiondir)
 php_plugin_LTLIBRARIES = libvirt-php.la
 libvirt_php_la_SOURCES = \
 	util.c util.h	\
-	vncfunc.c \
+	vncfunc.c vncfunc.h	\
 	sockets.c \
 	libvirt-php.c libvirt-php.h
 libvirt_php_la_CFLAGS = \
