src: Introduce util.h
Move out some macros that are shared between multiple source
files into a separate file called util.h.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,6 +18,7 @@ LIBVIRT_PHP_SYMBOL_FILE = \
 php_plugindir = $(extensiondir)
 php_plugin_LTLIBRARIES = libvirt-php.la
 libvirt_php_la_SOURCES = \
+	util.h	\
 	vncfunc.c \
 	sockets.c \
 	libvirt-php.c libvirt-php.h
