configure: Don't run php-config directly
Since we allow users to specify their own path to php-config
binary, we shouldn't be executing 'php-config' but rather
$PHPCONFIG which contains the correct path to the binary.

Signed-off-by: Shaun Reitan <shaun.reitan@ndchost.com>

--- a/configure.ac
+++ b/configure.ac
@@ -159,7 +159,7 @@ if test "x$PHPCONFIG" = "xno"; then
     AC_MSG_ERROR([php-config not found; please install the PHP SDK])
 fi
 
-AC_PATH_PROG([PHPIZE], [phpize], [no], [`php-config --prefix`/bin$PATH_SEPARATOR$PATH])
+AC_PATH_PROG([PHPIZE], [phpize], [no], [`$PHPCONFIG --prefix`/bin$PATH_SEPARATOR$PATH])
 if test "x$PHPIZE" = "xno"; then
     AC_MSG_ERROR([phpize not found; please install the PHP SDK])
 fi
