--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -85,8 +85,10 @@ rm -rf %{buildroot}
 %{_datadir}/doc/%{name}-%{version}/html
 
 %changelog
-* XXX XXX 00 2017 Michal Privoznik <mprivozn@redhat.com> - 0.5.4
-- XXX
+* Wed Aug 2 2017 Michal Privoznik <mprivozn@redhat.com> - 0.5.4
+- Added API bindings for getting/setting network autostart
+- Implement NWFilter API bindings
+- Bug fixes
 
 * Thu May 11 2017 Michal Privoznik <mprivozn@redhat.com> - 0.5.3
 - Several improvements for the build system
