Split up the bindings for libvirt connection API
* add libvirt-connection.h and libvirt-connection.c
* move all libvirt_connect_* function declarations and definitions to
  above files
* other minor adjusments to libvirt-php.h and util.h to keep the code
  compilable while the code is being moved around.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,8 @@ libvirt_php_la_SOURCES = \
 	util.c util.h	\
 	vncfunc.c vncfunc.h	\
 	sockets.c sockets.h \
-	libvirt-php.c libvirt-php.h
+	libvirt-php.c libvirt-php.h \
+	libvirt-connection.c libvirt-connection.h
 libvirt_php_la_CFLAGS = \
 	$(AM_CFLAGS) \
 	-DCOMPILE_DL_LIBVIRT=1
