Split up the bindings for libvirt node API
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,8 @@ libvirt_php_la_SOURCES = \
 	vncfunc.c vncfunc.h	\
 	sockets.c sockets.h \
 	libvirt-php.c libvirt-php.h \
-	libvirt-connection.c libvirt-connection.h
+	libvirt-connection.c libvirt-connection.h \
+	libvirt-node.c libvirt-node.h
 libvirt_php_la_CFLAGS = \
 	$(AM_CFLAGS) \
 	-DCOMPILE_DL_LIBVIRT=1
