Split up the bindings for libvirt stream API

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,7 +23,8 @@ libvirt_php_la_SOURCES = \
 	sockets.c sockets.h \
 	libvirt-php.c libvirt-php.h \
 	libvirt-connection.c libvirt-connection.h \
-	libvirt-node.c libvirt-node.h
+	libvirt-node.c libvirt-node.h \
+	libvirt-stream.c libvirt-stream.h
 libvirt_php_la_CFLAGS = \
 	$(AM_CFLAGS) \
 	-DCOMPILE_DL_LIBVIRT=1
