gitlab: switch most jobs to build against distro libvirt
The php build needs to validate two axis

 - A variety of libvirt versions
 - A variety of python versions

We get coverage for both these axis by running a build against the
distro provided libvirt packages. All that is then missing is a build
against the latest libvirt git master, which only needs to be run on
a single distro, for which Fedora 32 is picked. CentOS 8 is unable to
build since it lacks php-imagick.

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,6 @@ stages:
     - export LD_LIBRARY_PATH="$VROOT/lib"
     - export PATH="$VROOT/bin:$PATH"
     - export PKG_CONFIG_PATH="$VROOT/lib/pkgconfig"
-    - export TEST_MAINTAINER=1
   script:
     - pushd "$PWD"
     - mkdir -p "$SCRATCH_DIR"
@@ -42,6 +41,17 @@ stages:
     - ../autogen.sh --prefix="$VROOT" --without-libvirtd
     - $MAKE install
     - popd
+    - ./autogen.sh
+    - make distcheck
+  after_script:
+    - find -name test-suite.log | xargs cat
+
+.dist_build_job_template: &dist_build_job_definition
+  image: $CI_REGISTRY_IMAGE/ci-$NAME:latest
+  stage: builds
+  before_script:
+    - export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
+  script:
     - ./autogen.sh
     - make distcheck
   after_script:
@@ -111,52 +121,58 @@ ubuntu-2004-container:
     NAME: ubuntu-2004
 
 
-centos-7-git-build:
-  <<: *git_build_job_definition
-  variables:
-    NAME: centos-7
-
-debian-9-git-build:
-  <<: *git_build_job_definition
-  variables:
-    NAME: debian-9
-
-debian-10-git-build:
-  <<: *git_build_job_definition
-  variables:
-    NAME: debian-10
-
-debian-sid-git-build:
-  <<: *git_build_job_definition
-  variables:
-    NAME: debian-sid
-
-fedora-31-git-build:
-  <<: *git_build_job_definition
-  variables:
-    NAME: fedora-31
-
 fedora-32-git-build:
   <<: *git_build_job_definition
   variables:
     NAME: fedora-32
 
-fedora-rawhide-git-build:
-  <<: *git_build_job_definition
+
+centos-7-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: centos-7
+
+debian-9-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: debian-9
+
+debian-10-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: debian-10
+
+debian-sid-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: debian-sid
+
+fedora-31-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: fedora-31
+
+fedora-32-dist-build:
+  <<: *dist_build_job_definition
+  variables:
+    NAME: fedora-32
+
+fedora-rawhide-dist-build:
+  <<: *dist_build_job_definition
   variables:
     NAME: fedora-rawhide
 
-opensuse-151-git-build:
-  <<: *git_build_job_definition
+opensuse-151-dist-build:
+  <<: *dist_build_job_definition
   variables:
     NAME: opensuse-151
 
-ubuntu-1804-git-build:
-  <<: *git_build_job_definition
+ubuntu-1804-dist-build:
+  <<: *dist_build_job_definition
   variables:
     NAME: ubuntu-1804
 
-ubuntu-2004-git-build:
-  <<: *git_build_job_definition
+ubuntu-2004-dist-build:
+  <<: *dist_build_job_definition
   variables:
     NAME: ubuntu-2004
