generate-api-docs: Switch to getopt_long()
We want to reorder the argv[] so that we can have multiple input
files and they will be at the end of the argv[].

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -13,8 +13,8 @@ doc_generated_files = \
 $(doc_generated_files): $(APIBUILD_STAMP)
 
 $(APIBUILD_STAMP): generate-api-docs
-	./generate-api-docs $(top_srcdir)/src/libvirt-php.c ../docs/api-reference.html.in
-	./generate-api-docs --private $(top_srcdir)/src/libvirt-php.c ../docs/dev-api-reference.html.in
+	./generate-api-docs -o ../docs/api-reference.html.in $(top_srcdir)/src/libvirt-php.c
+	./generate-api-docs --private -o ../docs/dev-api-reference.html.in $(top_srcdir)/src/libvirt-php.c
 	touch $@
 
 CLEANFILES = $(doc_generated_files)
