configure: convert to using xz archives for dist
The automake 'distcheck' target accidentally passes the '--best' arg to
gzip when decompressing, when it only makes sense for compressing. This
is harmless with the normal gzip impl, but triggers an error with the
busybox gzip.

We have been relying on getting 'gzip' indirectly via an existing pkg
dependency, and recently this changed from the full gzip to a busybox
minimal gzip in openSUSE tumbleweed.

While we could add an explicit gzip dep, we instead take the opportunity
to switch the project over to 'xz'.

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/docs/compiling.html.in
+++ b/docs/compiling.html.in
@@ -12,7 +12,7 @@
     </p>
 
     <pre>
-      $ gunzip -c libvirt-php-x.x.x.tar.gz | tar xvf -
+      $ unxz -c libvirt-php-x.x.x.tar.xz | tar xvf -
       $ cd libvirt-php-x.x.x
       $ ./configure</pre>
 
