--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -20,7 +20,7 @@ Group:      Development/Libraries
 %endif
 License:    PHP
 URL:        http://libvirt.org/php
-Source0:    http://libvirt.org/sources/php/libvirt-php-%{version}.tar.gz
+Source0:    http://libvirt.org/sources/php/libvirt-php-%{version}.tar.xz
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root
 
 BuildRequires:  php-devel
