ci: update manifest and refresh configuration
This replaces Fedora 33 with Fedora 35

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/ci/gitlab.yml
+++ b/ci/gitlab.yml
@@ -10,8 +10,7 @@
   stage: containers
   needs: []
   services:
-    - name: registry.gitlab.com/libvirt/libvirt-ci/docker-dind:master
-      alias: docker
+    - docker:dind
   before_script:
     - export TAG="$CI_REGISTRY_IMAGE/ci-$NAME:latest"
     - export COMMON_TAG="$CI_REGISTRY/libvirt/libvirt-php/ci-$NAME:latest"
@@ -64,18 +63,18 @@ x86_64-debian-sid-container:
     NAME: debian-sid
 
 
-x86_64-fedora-33-container:
-  extends: .container_job
-  allow_failure: false
-  variables:
-    NAME: fedora-33
-
-
 x86_64-fedora-34-container:
   extends: .container_job
   allow_failure: false
   variables:
     NAME: fedora-34
+
+
+x86_64-fedora-35-container:
+  extends: .container_job
+  allow_failure: false
+  variables:
+    NAME: fedora-35
 
 
 x86_64-fedora-rawhide-container:
@@ -133,15 +132,6 @@ x86_64-debian-sid:
     NAME: debian-sid
 
 
-x86_64-fedora-33:
-  extends: .native_build_job
-  needs:
-    - x86_64-fedora-33-container
-  allow_failure: false
-  variables:
-    NAME: fedora-33
-
-
 x86_64-fedora-34:
   extends: .native_build_job
   needs:
@@ -149,6 +139,15 @@ x86_64-fedora-34:
   allow_failure: false
   variables:
     NAME: fedora-34
+
+
+x86_64-fedora-35:
+  extends: .native_build_job
+  needs:
+    - x86_64-fedora-35-container
+  allow_failure: false
+  variables:
+    NAME: fedora-35
 
 
 x86_64-fedora-rawhide:
