--- a/ci/gitlab.yml
+++ b/ci/gitlab.yml
@@ -58,7 +58,7 @@ x86_64-debian-10-container:
 
 x86_64-debian-sid-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: debian-sid
 
@@ -79,7 +79,7 @@ x86_64-fedora-35-container:
 
 x86_64-fedora-rawhide-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: fedora-rawhide
 
@@ -93,7 +93,7 @@ x86_64-opensuse-leap-152-container:
 
 x86_64-opensuse-tumbleweed-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: opensuse-tumbleweed
 
@@ -127,7 +127,7 @@ x86_64-debian-sid:
   extends: .native_build_job
   needs:
     - x86_64-debian-sid-container
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: debian-sid
 
@@ -154,7 +154,7 @@ x86_64-fedora-rawhide:
   extends: .native_build_job
   needs:
     - x86_64-fedora-rawhide-container
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: fedora-rawhide
 
@@ -172,7 +172,7 @@ x86_64-opensuse-tumbleweed:
   extends: .native_build_job
   needs:
     - x86_64-opensuse-tumbleweed-container
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: opensuse-tumbleweed
 
