--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -6,17 +6,19 @@
     <h2>Official Releases</h2>
 
     <p>
-      You can download the official release, release 0.5.5, from:
+      You can download the official release, release 0.5.6, from:
     </p>
 
 <pre>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz</a>
+<a href="http://libvirt.org/sources/php/libvirt-php-0.5.6.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.6.tar.xz</a>
 </pre>
 
     <p>
       However if you prefer to download any versions of the previous official releases please click on the release you want to download:
     </p>
 
+<a href="http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz</a>
+<br/>
 <a href="http://libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz</a>
 <br/>
 <a href="http://libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz</a>
