--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -65,3 +65,13 @@ x86_64-ubuntu-2004:
   allow_failure: false
   variables:
     NAME: ubuntu-2004
+
+
+x86_64-ubuntu-2204:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-ubuntu-2204-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: ubuntu-2204
