--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -47,6 +47,16 @@ x86_64-fedora-rawhide:
     NAME: fedora-rawhide
 
 
+x86_64-opensuse-leap-153:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-opensuse-leap-153-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: opensuse-leap-153
+
+
 x86_64-opensuse-tumbleweed:
   extends: .native_build_job
   needs:
