--- a/ci/gitlab/containers.yml
+++ b/ci/gitlab/containers.yml
@@ -35,6 +35,13 @@ x86_64-fedora-rawhide-container:
     NAME: fedora-rawhide
 
 
+x86_64-opensuse-leap-153-container:
+  extends: .container_job
+  allow_failure: false
+  variables:
+    NAME: opensuse-leap-153
+
+
 x86_64-opensuse-tumbleweed-container:
   extends: .container_job
   allow_failure: true
