--- a/ci/manifest.yml
+++ b/ci/manifest.yml
@@ -29,6 +29,8 @@ targets:
       - arch: x86_64
         allow-failure: true
 
+  opensuse-leap-153: x86_64
+
   opensuse-tumbleweed:
     jobs:
       - arch: x86_64
