--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,7 @@ SHLIB_FLAGS=@SHLIB_FLAGS@
 
 AM_CFLAGS = \
 	$(PHP_CFLAGS) $(LIBXML_CFLAGS) \
-	$(LIBVIRT_CFLAGS) $(QEMU_CFLAGS) \
-	-I$(top_srcdir)/winsrc
+	$(LIBVIRT_CFLAGS) $(QEMU_CFLAGS)
 
 AM_LDFLAGS = \
 	$(SHLIB_LDFLAGS) \
