tests: Introduce check_parameters test
Inside PHP sources exists check_parameters.php script that checks
whether arguments passed to zend_parse_*() correspond to the
format string (e.g. "%s" corresponds to (char*, size_t) pair).
Given the recent problem we had (the format string said long but
we were passing just int - libvirt-php-0.5.5-65-gb99d7c4) it's
worth running this script as a part of our test suite.

However, a slight adjustment had to be made as we are using
GET_*_FROM_ARGS() macros that wrap zend_parse_parameters().
Fortunately, the change is trivial - just add another case to
regex in function check_function().

The original script can be found here:

https://github.com/php/php-src/blob/master/scripts/dev/check_parameters.php

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,11 @@
-test_scripts = runtests.sh
+test_scripts = \
+	runtests.sh \
+	check_parameters.sh
 
 TESTS = $(test_scripts)
+
 EXTRA_DIST = $(test_scripts) \
+	check_parameters.php \
 	runtests-report.sh \
 	data \
 	functions.phpt.in \
@@ -31,5 +35,10 @@ functions.phpt: functions.phpt.in
 	< $< > $@-t && \
 	chmod a+x $@-t && \
 	mv $@-t $@
+
+TESTS_ENVIRONMENT = \
+  abs_builddir="$(abs_builddir)" \
+  abs_srcdir="$(abs_srcdir)" \
+  LC_ALL=C
 
 CLEANFILES = functions.phpt
