--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,7 @@ stages:
   - sanity_checks
 
 .native_git_build_job:
-  extends: .gitlab_native_build_job
-  before_script:
+  script:
     - export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
     - export SCRATCH_DIR="/tmp/scratch"
     - export VROOT="$SCRATCH_DIR/vroot"
@@ -14,7 +13,6 @@ stages:
     - export LD_LIBRARY_PATH="$LIBDIR"
     - export PATH="$VROOT/bin:$PATH"
     - export PKG_CONFIG_PATH="$LIBDIR/pkgconfig"
-  script:
     - pushd "$PWD"
     - mkdir -p "$SCRATCH_DIR"
     - cd "$SCRATCH_DIR"
@@ -28,14 +26,32 @@ stages:
   after_script:
     - find -name test-suite.log | xargs cat
 
+.native_git_build_job_prebuilt_env:
+  extends:
+    - .native_git_build_job
+    - .gitlab_native_build_job_prebuilt_env
+
+.native_git_build_job_local_env:
+  extends:
+    - .native_git_build_job
+    - .gitlab_native_build_job_local_env
+
 .native_build_job:
-  extends: .gitlab_native_build_job
-  before_script:
-    - export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
   script:
+    - export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
     - ./autogen.sh
     - make distcheck
   after_script:
     - find -name test-suite.log | xargs cat
+
+.native_build_job_prebuilt_env:
+  extends:
+    - .native_build_job
+    - .gitlab_native_build_job_prebuilt_env
+
+.native_build_job_local_env:
+  extends:
+    - .native_build_job
+    - .gitlab_native_build_job_local_env
 
 include: '/ci/gitlab.yml'
