--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -7,8 +7,8 @@
 
 # Native build jobs
 
-x86_64-debian-10-git:
-  extends: .native_git_build_job
+x86_64-debian-10-git-prebuilt-env:
+  extends: .native_git_build_job_prebuilt_env
   needs:
     - job: x86_64-debian-10-container
       optional: true
@@ -16,9 +16,17 @@ x86_64-debian-10-git:
   variables:
     NAME: debian-10
 
+x86_64-debian-10-git-local-env:
+  extends: .native_git_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: docker.io/library/debian:10-slim
+    NAME: debian-10
 
-x86_64-debian-11:
-  extends: .native_build_job
+
+x86_64-debian-11-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-debian-11-container
       optional: true
@@ -26,9 +34,17 @@ x86_64-debian-11:
   variables:
     NAME: debian-11
 
+x86_64-debian-11-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: docker.io/library/debian:11-slim
+    NAME: debian-11
 
-x86_64-debian-sid:
-  extends: .native_build_job
+
+x86_64-debian-sid-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-debian-sid-container
       optional: true
@@ -36,9 +52,17 @@ x86_64-debian-sid:
   variables:
     NAME: debian-sid
 
+x86_64-debian-sid-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: true
+  variables:
+    IMAGE: docker.io/library/debian:sid-slim
+    NAME: debian-sid
 
-x86_64-fedora-35:
-  extends: .native_build_job
+
+x86_64-fedora-35-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-fedora-35-container
       optional: true
@@ -46,9 +70,17 @@ x86_64-fedora-35:
   variables:
     NAME: fedora-35
 
+x86_64-fedora-35-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: registry.fedoraproject.org/fedora:35
+    NAME: fedora-35
 
-x86_64-fedora-36:
-  extends: .native_build_job
+
+x86_64-fedora-36-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-fedora-36-container
       optional: true
@@ -56,9 +88,17 @@ x86_64-fedora-36:
   variables:
     NAME: fedora-36
 
+x86_64-fedora-36-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: registry.fedoraproject.org/fedora:36
+    NAME: fedora-36
 
-x86_64-fedora-rawhide:
-  extends: .native_build_job
+
+x86_64-fedora-rawhide-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-fedora-rawhide-container
       optional: true
@@ -66,9 +106,17 @@ x86_64-fedora-rawhide:
   variables:
     NAME: fedora-rawhide
 
+x86_64-fedora-rawhide-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: true
+  variables:
+    IMAGE: registry.fedoraproject.org/fedora:rawhide
+    NAME: fedora-rawhide
 
-x86_64-opensuse-leap-153:
-  extends: .native_build_job
+
+x86_64-opensuse-leap-153-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-opensuse-leap-153-container
       optional: true
@@ -76,9 +124,17 @@ x86_64-opensuse-leap-153:
   variables:
     NAME: opensuse-leap-153
 
+x86_64-opensuse-leap-153-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: registry.opensuse.org/opensuse/leap:15.3
+    NAME: opensuse-leap-153
 
-x86_64-opensuse-tumbleweed:
-  extends: .native_build_job
+
+x86_64-opensuse-tumbleweed-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-opensuse-tumbleweed-container
       optional: true
@@ -86,9 +142,17 @@ x86_64-opensuse-tumbleweed:
   variables:
     NAME: opensuse-tumbleweed
 
+x86_64-opensuse-tumbleweed-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: true
+  variables:
+    IMAGE: registry.opensuse.org/opensuse/tumbleweed:latest
+    NAME: opensuse-tumbleweed
 
-x86_64-ubuntu-2004:
-  extends: .native_build_job
+
+x86_64-ubuntu-2004-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-ubuntu-2004-container
       optional: true
@@ -96,12 +160,28 @@ x86_64-ubuntu-2004:
   variables:
     NAME: ubuntu-2004
 
+x86_64-ubuntu-2004-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: docker.io/library/ubuntu:20.04
+    NAME: ubuntu-2004
 
-x86_64-ubuntu-2204:
-  extends: .native_build_job
+
+x86_64-ubuntu-2204-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
   needs:
     - job: x86_64-ubuntu-2204-container
       optional: true
   allow_failure: false
   variables:
+    NAME: ubuntu-2204
+
+x86_64-ubuntu-2204-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: docker.io/library/ubuntu:22.04
     NAME: ubuntu-2204
