--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,4 +54,33 @@ stages:
     - .native_build_job
     - .gitlab_native_build_job_local_env
 
+.website:
+  script:
+    - mkdir /tmp/web
+    - ./autogen.sh --with-html-dir=/tmp/web
+    - make
+    - make install
+    - mv /tmp/web/libvirt-php*/html public
+  artifacts:
+    paths:
+      - public
+
+pages:
+  extends:
+    - .website
+    - .gitlab_native_build_job_prebuilt_env
+  needs:
+    - job: x86_64-ubuntu-2204-container
+      optional: true
+  variables:
+    NAME: ubuntu-2204
+
+website_local_env:
+  extends:
+    - .website
+    - .gitlab_native_build_job_local_env
+  variables:
+    IMAGE: docker.io/library/ubuntu:22.04
+    NAME: ubuntu-2204
+
 include: '/ci/gitlab.yml'
