--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -45,9 +45,10 @@
     <h2>Git source repository</h2>
 
     <p>
-      You can clone the development version of libvirt-php from GIT repository:
+      You can clone the development version of libvirt-php from the upstream GIT
+      repository hosted on <a href="https://gitlab.com/libvirt/libvirt-php/">Gitlab</a>.
     </p>
-    <pre>git clone git://libvirt.org/libvirt-php</pre>
+    <pre>git clone https://gitlab.com/libvirt/libvirt-php.git</pre>
 
      <p>If you want to contribute to the libvirt-php project please refer to <a href="contributions.html">Contributions</a>.</p>
   </body>
