--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -10,36 +10,36 @@
     </p>
 
 <pre>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.7.tar.xz">http://libvirt.org/sources/php/libvirt-php-0.5.7.tar.xz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.7.tar.xz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.7.tar.xz</a>
 </pre>
 
     <p>
       However if you prefer to download any versions of the previous official releases please click on the release you want to download:
     </p>
 
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.6.tar.xz">http://libvirt.org/sources/php/libvirt-php-0.5.6.tar.xz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.6.tar.xz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.6.tar.xz</a>
 <br/>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.5.tar.gz</a>
 <br/>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.4.tar.gz</a>
 <br/>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.3.tar.gz</a>
 <br/>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.2.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.2.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.2.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.2.tar.gz</a>
 <br/>
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.1.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.5.0.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.4.9.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.4.8.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.4.7.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.4.6.tar.gz</a>
 <br />
-<a href="http://libvirt.org/sources/php/libvirt-php-0.4.5.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.5.tar.gz</a>
+<a href="https:/www.libvirt.org/sources/php/libvirt-php-0.4.5.tar.gz">https:/www.libvirt.org/sources/php/libvirt-php-0.4.5.tar.gz</a>
 <br />
 
     <h2>Git source repository</h2>
