--- a/docs/links.html.in
+++ b/docs/links.html.in
@@ -8,7 +8,7 @@
     </p>
 
     <ul>
-	<li><a href="https:/www.libvirt.org">Libvirt</a></li>
+	<li><a href="https://www.libvirt.org">Libvirt</a></li>
         <li><a href="http://www.php.net">PHP</a></li>
 	<li><a href="http://www.php-virt-control.org">php-virt-control (web-based administration tool for PHP)</a></li>
     </ul>
