--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -19,8 +19,8 @@ Group:      Development/Libraries/PHP
 Group:      Development/Libraries
 %endif
 License:    PHP
-URL:        https:/www.libvirt.org/php
-Source0:    https:/www.libvirt.org/sources/php/libvirt-php-%{version}.tar.xz
+URL:        https://www.libvirt.org/php
+Source0:    https://www.libvirt.org/sources/php/libvirt-php-%{version}.tar.xz
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root
 
 BuildRequires:  php-devel
@@ -40,7 +40,7 @@ Requires:   php
 
 %description
 PHP language bindings for Libvirt API.
-For more details see: https:/www.libvirt.org/php/
+For more details see: https://www.libvirt.org/php/
 
 %package -n libvirt-php-doc
 Summary:    Document of libvirt-php
@@ -50,7 +50,7 @@ Requires:   libvirt-php = %{version}
 
 %description -n libvirt-php-doc
 PHP language bindings for Libvirt API.
-For more details see: https:/www.libvirt.org/php/ http://www.php.net/
+For more details see: https://www.libvirt.org/php/ http://www.php.net/
 
 This package contain the document for libvirt-php.
 
